2009-10-08 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_remove_item):
	Moved to runtime library.

	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c (na_object_item_remove_item):
	Moved to runtime library.

	* src/nact/nact-tree-model.c (fill_tree_store):
	Rewrite duplication code to get reference counts equal to 1 in the store.
	Install parent pointer in childs.

	* src/runtime/na-object-api.h (na_object_remove_item):
	Moved from common library.

	* src/runtime/na-object-id.c (instance_dispose):
	Remove itself from parent if any.

	* src/runtime/na-object-item-fn.h:
	* src/runtime/na-object-item.c (na_object_item_remove_item):
	Moved from common library.

	* src/runtime/na-object.c:
	Remove useless debug traces.

	Items loaded from an IO provider but not recorded in the hierarchical
	tree are yet displayed, at the end of the tree.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h:
	* src/runtime/na-pivot.c:
	* src/runtime/na-pivot.h:
	* src/nact/nact-main-menubar.c:
	nact_window_write_level_zero renamed as na_pivot_write_level_zero.

	* src/runtime/na-iio-provider.c (na_iio_provider_get_items_tree):
	Merge left items in the hierarchy, and update the level-zero list.

	* src/runtime/na-gconf-provider.c:
	* src/runtime/na-object-menu-fn.h:
	* src/runtime/na-object-menu.c:
	na_object_menu_set_items_list renamed as
	na_object_menu_set_items_string_list.

	na_object_free_items: Renamed to na_object_free_items_list.

	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-window.c:
	* src/runtime/na-iio-provider.c:
	* src/runtime/na-object-api.h:
	* src/runtime/na-object-class.h:
	* src/runtime/na-object-fn.h:
	* src/runtime/na-object-item-fn.h:
	* src/runtime/na-object-item.c:
	* src/runtime/na-object.c:
	* src/runtime/na-pivot.c: Updated accordingly.

	na_object_get_items: Renamed to na_object_get_items_list,